// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/ModalHeaderPresenter  1`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={undefined}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <span
      className="hig__icon-button__icon"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"19\\" height=\\"19\\" viewBox=\\"0 0 19 19\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"x-close-gray-24\\"><g fill=\\"#949DA2\\" fill-rule=\\"evenodd\\"><rect transform=\\"rotate(45 9.192 9.192)\\" x=\\"-2.808\\" y=\\"8.192\\" width=\\"24\\" height=\\"2\\"/><rect transform=\\"rotate(135 9.192 9.192)\\" x=\\"-2.808\\" y=\\"8.192\\" width=\\"24\\" height=\\"2\\"/></g></svg>",
          }
        }
      />
    </span>
  </button>
  <span
    className="hig__modal-V1__header-title"
  />
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  2`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <p>
    Title
  </p>
</header>
`;

exports[`checkbox/presenters/ModalHeaderPresenter  3`] = `
<header
  className="hig__modal-V1__header"
  id={undefined}
>
  <button
    className="hig__icon-button hig__icon-button--primary"
    onBlur={undefined}
    onClick={[Function]}
    onFocus={undefined}
    onMouseEnter={undefined}
    onMouseLeave={undefined}
    title="Close"
  >
    <span
      className="hig__icon-button__icon"
    >
      <div
        className="hig__icon hig__icon--24-size"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg width=\\"19\\" height=\\"19\\" viewBox=\\"0 0 19 19\\" xmlns=\\"http://www.w3.org/2000/svg\\" role=\\"img\\" title=\\"x-close-gray-24\\"><g fill=\\"#949DA2\\" fill-rule=\\"evenodd\\"><rect transform=\\"rotate(45 9.192 9.192)\\" x=\\"-2.808\\" y=\\"8.192\\" width=\\"24\\" height=\\"2\\"/><rect transform=\\"rotate(135 9.192 9.192)\\" x=\\"-2.808\\" y=\\"8.192\\" width=\\"24\\" height=\\"2\\"/></g></svg>",
          }
        }
      />
    </span>
  </button>
  <span
    className="hig__modal-V1__header-title"
  >
    HELLO
  </span>
</header>
`;
